--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,10 +12,16 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@serwist/build": "^9.0.11",
     "@types/node": "22.13.4",
     "@types/react": "^19.0.10",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.1",
+    "serwist": "^9.0.11",
+    "tailwindcss": "^4.0.7",
     "typescript": "5.7.3"
   }
 }
